@@ -1,6 +1,11 @@
 2020-02-03 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c:
+	  Separate __z88dk_fastcall registers from return value registers.
+
+2020-02-03 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c:
 	  Fix a bug in code generation for wide unary minus with upper operand word in hl.
 
 2020-02-03 Philipp Klaus Krause <pkk AT spth.de>
